ch18/app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: metrics
  labels:
    app: metrics-service
spec:
  containers:
  - name: echoserver
    image: k8s.gcr.io/echoserver:1.10
    ports:
    - containerPort: 8080
