ch18/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-service
spec:
  type: ClusterIP
  selector:
    app: metrics-service
  ports:
  - port: 9090
    targetPort: 8080
    protocol: TCP
