ch18/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: ClusterIP
  selector:
    app: app-service
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
